tests/reject/slice_inout_alias.ty
# A slice argument views its source's buffer; passing an `inout` of that SAME
# variable in one call could reallocate the buffer (e.g. `push`), leaving the
# slice dangling -- so both compilers reject the overlap. tychoc always did
# (src/tychoc.c:5022-5038); tychoc0 used to accept `f(a[0:2], &a)` (no such
# check) -- now fixed (parity restored).
fn f(s: [int], x: inout [int]):
    push(x, 99)
fn main():
    a := [1, 2, 3]
    f(a[0:2], &a)
    print(str(len(a)))
